downlad tumblr images

--- a/_posts/2022-02-05-2021-damage-report.md
+++ b/_posts/2022-02-05-2021-damage-report.md
@@ -11,23 +11,23 @@ Dealing with wear and attrition has always been part of the job, just as hostile
 
 So we give thanks for all the good craziness we have been fortunate to be involved with, and we deal with the bad craziness, year after year.
 
-![](https://64.media.tumblr.com/9716da032339f0e5d4e349e3cc873604/9f8f825a60e2c1f3-08/s540x810/c3c8f9906083dd40aa63559ca631a5e0dc0d666e.jpg)
+![](/images/blog/c3c8f9906083dd40aa63559ca631a5e0dc0d666e.jpg)
 
 The most impressive part of this one is the coin return slot, and also that the enclosure is not at all damaged. This must have involved a 3 foot crowbar? The assailant may have been trying to break into the vault, which is not going to happen with the tools they had. Incidentally, breaking into the vault is never going to give a good return on the expenses involved.
 
-![](https://64.media.tumblr.com/5801192e4511f25a525780bfc5034552/9f8f825a60e2c1f3-f9/s540x810/8774f7d505a9fe705dac3dab9fad5f319eb070ad.jpg)
+![](/images/blog/8774f7d505a9fe705dac3dab9fad5f319eb070ad.jpg)
 
 Two dudes drove up in a minivan, took a hit off their pipe, and started cutting into the pedestal with a reciprocating saw, then preferred to leave rather than be approached. Also not an economical pursuit. Skeezy scrapyards will take that, sure, but the kind of person who would saw off a pedestal is going to have to try to break into the phone and see what’s inside it. The work is going to use up a lot of bits and blades, and they won’t have proper eye or ear protection.
 
-![](https://64.media.tumblr.com/07e4f317287f4e31e8cebcad0b3259cf/9f8f825a60e2c1f3-ff/s540x810/297fbf327d602570ead6cb59bdb0449adb5c9c29.jpg)
+![](/images/blog/297fbf327d602570ead6cb59bdb0449adb5c9c29.jpg)
 
 This poor man spent a lot of time smashing the phone with a rock while being observed by a warehouse worker on a smoke break. This is sad. He must have busted up his hands. It sucks to have to replace a phone, but that’s not even the worst part of this situation.
 
-![](https://64.media.tumblr.com/a33fcb3f70f845116c1234fd7a9f3703/9f8f825a60e2c1f3-7e/s540x810/79b1dd447314bbaf22fd2c9f2a6fabda52a4bc83.jpg)
+![](/images/blog/79b1dd447314bbaf22fd2c9f2a6fabda52a4bc83.jpg)
 
 Even when it is stupid the graffiti on the phones and enclosures is usually at least interesting because the scenery continuously changes. And a lot of it is fun. There has been slightly more racist and fascist graffiti this year but it gets covered quickly, thanks.
 
-![](https://64.media.tumblr.com/91fd5b3493cfa2598c3aeddcae491c7b/9f8f825a60e2c1f3-1a/s540x810/b45abd50cc9f888e8e79a8d3a1a3c3fc9d1a219e.jpg)
+![](/images/blog/b45abd50cc9f888e8e79a8d3a1a3c3fc9d1a219e.jpg)
 
 Look at this phone. Nothing is getting into this phone. Actually, the handset remains the weak part, right now they’re $20 plus expenses and an hour to replace. And, of course, the marquee.
 
