--- a/_posts/2022-04-16-new-phone.md
+++ b/_posts/2022-04-16-new-phone.md
@@ -7,4 +7,4 @@ tumblr_url: https://futelco.tumblr.com/post/681729572789714944/new-phone
 ---
 Futel is providing phone service to the Social Justice Action Center on SE 12th, including during Hygiene Station and other program hours. We are glad to be able to support the SJAC, their projects, and their neighbors.
 
-![](https://64.media.tumblr.com/33b0a6ee2be09012ac94163465f2a494/56ee28ccc13b9eac-dd/s540x810/212673082a15257cc3471b02a6c913431037f905.png)
+![](/images/blog/212673082a15257cc3471b02a6c913431037f905.png)
