--- a/_posts/2023-01-07-2022-year-in-review.md
+++ b/_posts/2023-01-07-2022-year-in-review.md
@@ -12,7 +12,7 @@ Another year has been survived. Let us review.
 - Wildcard Line episode 8 was released. Contribute to the Wildcard Line from any Futel phone.
 - “Futel: Dial Tone For The People“ was presented at [ftp://con](https://www.ftpcon.com/) in August.
 - Party Line #7 was published, available from [Microcosm Publishing](https://microcosmpublishing.com/).
-- New installation technologies were developed with the support of a RACC Make|Learn|Build grant.
+- New installation technologies were developed with the support of a RACC Make\|Learn\|Build grant.
 
 Most importantly, we continued to provide services to our phones and incoming line. Usage for the year included:
 
