--- a/_posts/2023-12-11-photo.md
+++ b/_posts/2023-12-11-photo.md
@@ -5,5 +5,5 @@ date: '2023-12-11T22:31:22-08:00'
 tags: []
 tumblr_url: https://futelco.tumblr.com/post/736480652150620160/photo-by-jared
 ---
-![](https://64.media.tumblr.com/f09e208f70f35e6e0e690d28673e915b/ad0a8cccb183b1e0-cc/s640x960/362f4e89d44195ae75b2b4cf4fbab069b0d305f4.jpg)
+![](/images/blog/362f4e89d44195ae75b2b4cf4fbab069b0d305f4.jpg)
 
